airflow/logs/local_ingestion_v1.0/delete_logs_task/2023-03-17T14:23:49.486913+00:00/1.log
[2023-03-17 14:24:18,167] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: local_ingestion_v1.0.delete_logs_task manual__2023-03-17T14:23:49.486913+00:00 [queued]>
[2023-03-17 14:24:18,225] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: local_ingestion_v1.0.delete_logs_task manual__2023-03-17T14:23:49.486913+00:00 [queued]>
[2023-03-17 14:24:18,227] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-17 14:24:18,229] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-17 14:24:18,230] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-17 14:24:18,271] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): delete_logs_task> on 2023-03-17 14:23:49.486913+00:00
[2023-03-17 14:24:18,285] {standard_task_runner.py:52} INFO - Started process 2874 to run task
[2023-03-17 14:24:18,295] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'local_ingestion_v1.0', 'delete_logs_task', 'manual__2023-03-17T14:23:49.486913+00:00', '--job-id', '119', '--raw', '--subdir', 'DAGS_FOLDER/data_ingestion_local.py', '--cfg-path', '/tmp/tmpekt253lp', '--error-file', '/tmp/tmp_nxug0pu']
[2023-03-17 14:24:18,298] {standard_task_runner.py:77} INFO - Job 119: Subtask delete_logs_task
[2023-03-17 14:24:18,474] {logging_mixin.py:109} INFO - Running <TaskInstance: local_ingestion_v1.0.delete_logs_task manual__2023-03-17T14:23:49.486913+00:00 [running]> on host 8920ab98807f
[2023-03-17 14:24:18,674] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=local_ingestion_v1.0
AIRFLOW_CTX_TASK_ID=delete_logs_task
AIRFLOW_CTX_EXECUTION_DATE=2023-03-17T14:23:49.486913+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-17T14:23:49.486913+00:00
[2023-03-17 14:24:18,703] {base.py:79} INFO - Using connection to: id: postgress_localhost. Host: host.docker.internal, Port: 5432, Schema: wine_quality, Login: ***, Password: ***, extra: {}
[2023-03-17 14:24:18,761] {dbapi.py:225} INFO - Running statement: 
            delete from dag_runs (dt, dag_id) values ('2023-03-17', 'local_ingestion_v1.0')
        , parameters: None
[2023-03-17 14:24:18,769] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2:             delete from dag_runs (dt, dag_id) values ('2023-...
                                         ^

[2023-03-17 14:24:18,821] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=local_ingestion_v1.0, task_id=delete_logs_task, execution_date=20230317T142349, start_date=20230317T142418, end_date=20230317T142418
[2023-03-17 14:24:18,876] {standard_task_runner.py:92} ERROR - Failed to execute job 119 for task delete_logs_task
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2:             delete from dag_runs (dt, dag_id) values ('2023-...
                                         ^

[2023-03-17 14:24:18,918] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-17 14:24:19,042] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
